# xtd

./: .appveyor.yml  .codecov.yml  .codedocs  .cppcheck  .doxygen.txt  .gitignore  .gitmodules  .pnp.cjs  .travis.yml  404.html  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE.md  README.md  __TODO__.txt  application.h  control.h  deploy  docusaurus.config.js  doxygen.txt  doxygen_developer.txt  doxygen_warnings.txt  fix-docs.js  form.h  index.html  install  install.cmd  markdown-page.html  package-lock.json  package.json  sidebars.js  sidebars_.js  sitemap.xml  uninstall  uninstall.cmd  xtd.forms.test.cpp  xtd_unit_tests_evolution.md
console/: CMakeLists.txt
console/include/: background_color.hpp  beep.hpp  console.hpp  console_color.hpp  console_key.hpp  console_key_info.hpp  console_modifiers.hpp  console_special_key.hpp  export.hpp  foreground_color.hpp  format.hpp  reset_color.hpp
console/src/: __opaque_console_gcc.cpp  __opaque_console_win32.cpp  console.cpp  console_gcc.cpp  console_win32.cpp
docs/: CMakeLists.txt  README.md  Support.html  abstract_class_design.md  abstract_factory.md  abstractions_abstract_types_and_interfaces.md  adapter.md  add_a_control_to_a_form.md  add_a_form.md  add_or_remove_event_handlers.md  add_style_sheets_to_a_control.md  ambient_properties.md  application_overview.md  apply_accessibility_information.md  architecture.md  automatic_scalling.md  base_classes_for_implementing_abstractions.md  bridge.md  brushes.md  builder.md  c++.md  c++17.md  capitalisation_conventions.md  chain_of_responsibility.md  change_the_pressed_key.md  check_version.md  choosing_between_class_and_struct.md  class_cleanup.md  class_initialize.md  cmake_add_assembly_information.md  cmake_add_resources.md  cmake_add_settings.md  cmake_assembly_informations_commands.md  cmake_build_options_commands.md  cmake_create_project.md  cmake_files.md  cmake_generic_commands.md  cmake_install_commands.md  cmake_overview.md  cmake_packages_commands.md  (+347 more)
docs/Emoticons/: 01 - 00080-00FF Latin 1 Supplement.txt  02 - 2000-206F - General Punctuation.txt  03 - 2100-214F Letterlike Symbols.txt  04 - 2190-21FF Arrows.txt  05 - 2300-23FF Miscellaneous Technical.txt  06 - 2460-24FF Enclosed Alphanumerics.txt  07 - 25A0 25FF Geometric Shapes.txt  08 - 2600-26FF Miscellaneous Symbols.txt  09 - 2700-27BF Dingbats.txt  1 - 00080-00FF Latin 1 Supplement.txt  10 - 2900-297F Supplemental Arrows-B.txt  11 - 2B00-2BFF Miscellaneous Symbols And Arrows.txt  12 - 3000-303F CJK Symbols and Punctuation.txt  13 - 3200-32FF Enclosed CJK Letters and Months.txt  14 - FE00-FE0F Variation Selectors.txt  15 - 1F000-1F02F Mahjong Tiles.txt  16 - 1F0A0-1F0FF Playing Cards.txt  16 - 1F100-1F1FF Enclosed Alphanumeric Supplement.txt  17 - 1F200-1F2FF Enclosed Ideographic Supplement.txt  18 - 1F200-1F2FF Enclosed Ideographic Supplement.txt  18 - 1F300-1F5FF symbols_and_pictographs.txt  2 - 2000-206F - General Punctuation.txt  20 - 1F600-1F64F Emoticons (Emoji).txt  21 -  1F780-1F7FF Geometric Shapes Extended.txt  21 - 1F680-1F6FF Transport And Map Symbols.txt  22 - 1F780-1F7FF Geometric Shapes Extended.txt  22 - 1F900-1F9FF supplementals_symbols_and_apictographs.txt  23 - 1FA70-1F7FF Symbols and Pictographs Extended-A.txt  24 - Emoji ZWJ Sequences.txt  25 - Emoji ZWJ Sequences.txt  25 - Flags.txt  5 - 2300-23FF Miscellaneous Technical.txt  6 - 2460-24FF Enclosed Alphanumerics.txt  8 - 2600-26FF Miscellaneous Symbols.txt  9 - 2700-27BF Dingbats.txt  animals.txt  cats.txt  emoji.txt  faces.txt  nature.txt  (+2 more)
docs/Support/: README.md  contact.html  contact.md
docs/Support1/: README.md
docs/documentation/: 3rdparties_licenses.html  3rdparties_licenses.md  Design Guidelines.html  Development status.html  Guides.html  Internal.html  Portability.html  README.md  design_guidelines.md  development_status.md  documentation.md  eBook.html  external_tools_libraries_and_toolkits.html  external_tools_libraries_and_toolkits.md  features.html  features.md  getting_started.html  getting_started.md  guide_status.md  guides.md  license.html  license.md  links.html  links.md  portability.md  reference_guides.html  reference_guides.md  release_notes.html  release_notes.md  roadmap.html  roadmap.md  themes.html  themes.md  toolkits_licenses.html  toolkits_licenses.md  tools.html  tools.md  translation_status.html  translation_status.md
docs/doxygen/: README.md  custom.css  custom_dark_theme.css  custom_images.css  doxygen.txt  doxygen_developer.txt  html_footer.html  html_header.html  html_header_without_dark_mode_toggle_button.html  xtd_doxygen_layout.xml
docs/internal/: CI build status.md  README.md  add_new_control.md  buy_me_a_coffee.md  class_organization.md  computer_guid.md  default_size_of_controls.md  default_size_of_controls_g.md  default_size_of_controls_m.md  default_size_of_controls_w.md  deprecated.md  exceptions.md  exceptions.txt  git.md  ios_build.md  process.md  process.txt  release_notes (old).md  some_numbers.md  sounds.md  sounds.txt  speech.md  speedup_build.md  theme.md  wix_themes.md  wxwidgets window styles.md  wxwidgets_window_styles.md  xtd_explanations.md  xtd_forms_explanations.md
docs/news/: 20211010.html  20211010.md  20221118.html  20221118.md  20230209.html  20230209.md  20230717.html  20230717.md  20231112.html  20231112.md  20240312.html  20240312.md  20250615.md  20250630.md
docs/support/: README.md  (+2 more)
examples/: CMakeLists.txt  README.md
locale/: CMakeLists.txt  README.md
src/: CMakeLists.txt  README.md
strings/: CMakeLists.txt
tests/: CMakeLists.txt  README.md
themes/: CMakeLists.txt  README.md  macos_10_dark.css
tools/: CMakeLists.txt  README.md
xtd.console/: CMakeLists.txt
xtd.diagnostics/: CMakeLists.txt
xtd.drawing/: CMakeLists.txt
xtd.drawing.native/: CMakeLists.txt
xtd.drawing.native.wxwidgets/: CMakeLists.txt
xtd.environment/: CMakeLists.txt
xtd.forms/: CMakeLists.txt
xtd.forms.native/: CMakeLists.txt
xtd.forms.native.wxwidgets/: CMakeLists.txt  README.md
xtd.strings/: CMakeLists.txt
xtd.tunit/: .appveyor.yml  CMakeLists.txt  README.md
(+175159 files in other folders)
